fix bug and added more README information

--- a/CorporateActionCalculator.ipynb
+++ b/CorporateActionCalculator.ipynb
@@ -64,14 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "id": "cc075ac2-9ce9-48e6-9bf2-0c066dc9b02f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "652b0128ffa74e1d8250064e196e197c",
+       "model_id": "5c7d88c85ca747a8b0d85948be0a7760",
        "version_major": 2,
        "version_minor": 0
       },
@@ -85,7 +85,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "28d12a91f99f4278ba1398a38678b05b",
+       "model_id": "8081c594f7c0414daf2daa3484a74069",
        "version_major": 2,
        "version_minor": 0
       },
@@ -99,7 +99,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "017bfff467e948df8fd952fc3a54a280",
+       "model_id": "3452fa0dc10a425f9abfd6456020400e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -119,7 +119,7 @@
     "def calculate_theoretical_open_price(change):\n",
     "    \n",
     "    if cash_dividend.value >= 0 and last_close_price.value > 0:\n",
-    "        theoretical_open_price.value = last_close_price_value - cash_dividend_value\n",
+    "        theoretical_open_price.value = last_close_price.value - cash_dividend.value\n",
     "    else:\n",
     "        theoretical_open_price.value = 0 \n",
     "\n",
